--- a/kategori/vidio/bedah-tajuk.html
+++ b/kategori/vidio/bedah-tajuk.html
@@ -86,9 +86,9 @@
                 <li><a href="#"><i class="bi bi-camera-video"></i> Vidio</a></li>
                 <li><a href="#"><i class="bi bi-mic"></i> Podcase</a></li>
                 <li><a href="#"><i class="bi bi-newspaper"></i> Infografik</a></li></br>
-                <li><a href="../harian.html"><i class="bi bi-calendar3"></i> Harian</a></li>
+                <li><a href="../../harian.html"><i class="bi bi-calendar3"></i> Harian</a></li>
                 <li><a href="#"><i class="bi bi-calendar3"></i> Mingguan</a></li>
-                <li><a href="../index.html"><i class="bi bi-house-door"></i> Beranda</a></li>
+                <li><a href="../../index.html"><i class="bi bi-house-door"></i> Beranda</a></li>
             </ul>
         </div>
     </div>
@@ -107,7 +107,7 @@
         <div class="iklan-parent">
             <h2>KORAN DIGITAL</h2>
             <div class="tagar">
-                <a href="../harian.html">
+                <a href="../../harian.html">
                     <img src="../../image/showcase-350pxl2.gif" alt="img" class="epaper-image" id="epeper-microweb">
                 </a>
             </div>
