--- a/koran.html
+++ b/koran.html
@@ -55,10 +55,10 @@
                 <a href="#">Kolom</a>
                 <ul class="sub-menu" id="kolom">
                     <li><a href="kategori/opini.html">Opini</a></li>
-                    <li><a href="#">Refleksi</a></li>
-                    <li><a href="#">Nuansa</a></li>
-                    <li><a href="#">Tajuk</a></li>
-                    <li><a href="#">Forum Guru</a></li>
+                    <li><a href="kategori/refleksi.html">Refleksi</a></li>
+                    <li><a href="kategori/nuansa.html">Nuansa</a></li>
+                    <li><a href="kategori/tajuk-lampung-post.html">Tajuk</a></li>
+                    <li><a href="kategori/forum-guru.html">Forum Guru</a></li>
                 </ul>
             </li>
             <li class="has-sub">
